--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hint_title">Title</string>
     <string name="hint_text">Text</string>
+    <string name="empty_list">Nothing to see here. Tap the + icon to create a new note</string>
 </resources>
