--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">MyNotes</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="hint_title">Title</string>
-    <string name="hint_text">Text</string>
+    <string name="hint_title">Enter Title</string>
+    <string name="hint_text">Note something down</string>
     <string name="empty_list">Nothing to see here. Tap the + icon to create a new note</string>
 </resources>
