--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hint_title">Enter Title</string>
     <string name="hint_text">Note something down</string>
-    <string name="empty_list">Nothing to see here. Tap the + icon to create a new note</string>
+    <string name="empty_list">You don\'t have any notes yet. Tap the + icon to create a new note</string>
+    <string name="content_desc_add_new_note">Add new note</string>
 </resources>
