Changed ViewModel initialization implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,20 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hint_title">Enter Title</string>
     <string name="hint_text">Note something down</string>
-    <string name="empty_list">You don\'t have any notes yet. Tap the + icon to create a new note</string>
+    <string name="empty_list">You have not created any note</string>
     <string name="content_desc_add_new_note">Add new note</string>
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
 </resources>
